k8s/intent-classifier/intent-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: intent-service
  namespace: intelliserve
spec:
  selector:
    app: intent
  ports:
  - port: 80
    targetPort: 80
